# pinetime-rs

./: Cargo.toml  README.md  fixed-link.x  lv_conf.h  openocd.gdb
.cargo/: config
scripts/: swd-stlink.ocd
src/: backlight.rs  delay.rs  main.rs  monotonic_nrf52.rs
