[package]
name = "pinetime-rs"
version = "0.1.0"
authors = ["Rafael Caricio <rafael@caricio.com>"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-graphics = "0.6"
embedded-hal = "0.2"
nrf52832-hal = {version = "0.8.1", default-features = false, features = ["xxAA-package", "rt"]}
#nrf52832-hal = { version = "0.10", default-features = false, features = ["xxAA-package", "rt"] }
shared-bus = {version = "0.1.4", features = ["cortexm"] }
st7789 = { git = "https://github.com/tstellanova/st7789" }
cst816s = "0.1.4"
cstr_core = "0.2.0"
lvgl = { path = "../lvgl-rs/lvgl" }

[profile.dev]
codegen-units = 1

[profile.release]
incremental = false # disable incremental build to allow lto on nightly
lto = true
debug = true
codegen-units = 1

