[package]
name = "pinetime-rs"
version = "0.1.0"
authors = ["Rafael Caricio <rafael@caricio.com>"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3.5"
embedded-graphics = "0.6"
embedded-hal = {version ="0.2.3", features = ["unproven"] }
nrf52832-hal = { version = "0.10", default-features = false, features = ["xxAA-package", "rt"] }
st7789 = { version = "0.5.0", features = ["graphics", "batch", "buffer"], default-features = false }
display-interface = "0.4"
display-interface-spi = "0.4"
panic-halt = "0.2.0"
cstr_core = "0.2.0"
numtoa = "0.2.3"
cst816s = { path = "../cst816s" }
lvgl = { path = "../lvgl-rs/lvgl" }

[profile.dev]
codegen-units = 1

[profile.release]
incremental = false # disable incremental build to allow lto on nightly
lto = true
debug = true
codegen-units = 1

